Fix mobile app heigth

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script
+      src="https://kit.fontawesome.com/2003d0cfef.js"
+      crossorigin="anonymous"
+    ></script>
     <title>React Calculator</title>
   </head>
   <body>
